--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
+    "framer-motion": "^11.3.21",
     "highlight.js": "^11.9.0",
     "html-react-parser": "^5.1.10",
     "lucide-react": "^0.378.0",
